--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -196,7 +196,7 @@
         transform: scaleX(1);
     }
     &__img {
-        display: inline-block;
+        display: block;
         margin: 0 auto;
         width: 144px;
         padding-top: 6px;
